--- a/openApiProject/index.html
+++ b/openApiProject/index.html
@@ -7,7 +7,7 @@
 <body>
     <nav>
         <ul> 
-            <li><a href="OpenApiProject/index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="pages/weather.html">Weather</a></li>
         </ul>
     </nav>
